--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Lora'serif;
+  font-family: 'Fira Sans', sans-serif;
   background-color: #F4F4F4;
   color: #fff;
   margin: 0;
