--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body {
     background-position: center;
     background-attachment: fixed;
     background-size: 90% auto;
+    transition: background-color 1s ease;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
 }
 
 main {
@@ -30,6 +36,7 @@ header {
     justify-content: space-between;
     z-index: 1;
     background-color: #2727e6b0;
+    transition: background-color 1s ease;
 }
 
 header nav {
@@ -74,4 +81,44 @@ header nav a {
 img {
     width: 100%;
     height: 750px;
+}
+
+#audio {
+    padding-top: 1px;
+}
+
+#down-arrow {
+    position: absolute;
+    top: calc(100vh - 80px);
+    left: calc(50% - 14px);
+    width: 0;
+    height: 30px;
+    border: 2px solid;
+    border-radius: 2px;
+    animation: jumpInfinite 1.5s infinite;
+}
+
+#down-arrow:after {
+    content: " ";
+    position: absolute;
+    top: 12px;
+    left: -10px;
+    width: 16px;
+    height: 16px;
+    border-bottom: 4px solid;
+    border-right: 4px solid;
+    border-radius: 4px;
+    transform: rotateZ(45deg);
+}
+
+@keyframes jumpInfinite {
+    0% {
+        margin-top: 0;
+    }
+    50% {
+        margin-top: 20px;
+    }
+    100% {
+        margin-top: 0;
+    }
 }
