--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
     font-family: 'MyWebFont';
     font-size: 24px;
     line-height: 1.25;
-    /* background-color: #2727e6; */
     color: #fff;
 }
 
@@ -70,6 +69,10 @@ header nav a {
     /* margin-left: 12px; */
 }
 
+.nav-button {
+    cursor: pointer;
+}
+
 .category {
     padding-top: 70vh;
 }
@@ -99,47 +102,6 @@ header nav a {
 img {
     width: 100%;
     height: auto;
-}
-
-
-/* #audio {
-    padding-top: 1px;
-} */
-
-#down-arrow {
-    position: absolute;
-    top: calc(100vh - 80px);
-    left: calc(50% - 14px);
-    width: 0;
-    height: 30px;
-    border: 2px solid;
-    border-radius: 2px;
-    animation: jumpInfinite 1.5s infinite;
-}
-
-#down-arrow:after {
-    content: " ";
-    position: absolute;
-    top: 12px;
-    left: -10px;
-    width: 16px;
-    height: 16px;
-    border-bottom: 4px solid;
-    border-right: 4px solid;
-    border-radius: 4px;
-    transform: rotateZ(45deg);
-}
-
-@keyframes jumpInfinite {
-    0% {
-        margin-top: 0;
-    }
-    50% {
-        margin-top: 20px;
-    }
-    100% {
-        margin-top: 0;
-    }
 }
 
 @media screen and (max-width: 850px) {
