--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
 .bg {
     top: 0;
     left: 0;
-    background-color: #2727e6;
+    /* background-color: #6600ff; */
+    background-color: hsl(264, 54%, 85%);
     background-image: url(assets/audio.svg);
     background-repeat: no-repeat;
     background-position: center;
@@ -48,7 +49,7 @@ header {
     display: flex;
     justify-content: space-between;
     z-index: 1;
-    background-color: #2727e6b0;
+    background-color: #00000000;
     transition: background-color 1s ease;
 }
 
@@ -78,15 +79,16 @@ header nav a {
 }
 
 .card {
-    margin: 200px 0 200px 0;
+    margin: 200px auto;
     position: relative;
+    width: 60%;
 }
 
 .card div.overlay {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #2727e653;
+    /* background-color: #2727e653; */
     width: 100%;
     height: 100%;
 }
