--- a/style.css
+++ b/style.css
@@ -5,21 +5,21 @@
 
 body {
     font-family: 'MyWebFont';
-    font-size: 24px;
+    font-size: 18px;
     line-height: 1.25;
-    color: #fff;
+    color: #000;
 }
 
 .bg {
     top: 0;
     left: 0;
-    /* background-color: #6600ff; */
-    background-color: hsl(264, 54%, 85%);
+    background-color: #fff;
+    /* background-color: hsl(264, 54%, 85%); */
     background-image: url(assets/audio.svg);
     background-repeat: no-repeat;
     background-position: center;
     height: 100vh;
-    width: 100vw;
+    width: 20vw;
     position: fixed;
     transition: background-color 1s ease;
 }
@@ -65,7 +65,7 @@ header nav p {
 }
 
 header nav a {
-    color: #fff;
+    color: #000;
     text-decoration: none;
     /* margin-left: 12px; */
 }
@@ -75,22 +75,24 @@ header nav a {
 }
 
 .category {
-    padding-top: 70vh;
+    padding-top: 10vh;
+    padding-bottom: 30vh;
 }
 
 .card {
     margin: 200px auto;
-    position: relative;
-    width: 60%;
+    position: sticky;
+    width: 50%;
+    top: 30vh;
 }
 
 .card div.overlay {
     position: absolute;
     top: 0;
     left: 0;
-    /* background-color: #2727e653; */
+    background-color: #5c5c6052;
     width: 100%;
-    height: 100%;
+    height: 99%;
 }
 
 .card h2 {
@@ -99,13 +101,16 @@ header nav a {
     position: sticky;
     position: -webkit-sticky;
     top: 45vh;
+    color: #fff;
 }
 
 img {
     width: 100%;
-    height: auto;
+    height: 400px;
 }
 
+
+/* 
 @media screen and (max-width: 850px) {
     body {
         font-size: 16px;
@@ -161,4 +166,4 @@ img {
     .card h2 {
         font-size: 12px;
     }
-}
+} */
