--- a/style.css
+++ b/style.css
@@ -5,23 +5,9 @@
 
 body {
     font-family: 'MyWebFont';
-    font-size: 18px;
+    /* font-size: 18px; */
     line-height: 1.25;
     color: #000;
-}
-
-.bg {
-    top: 0;
-    left: 0;
-    background-color: #fff;
-    /* background-color: hsl(264, 54%, 85%); */
-    background-image: url(assets/audio.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 100vh;
-    width: 20vw;
-    position: fixed;
-    transition: background-color 1s ease;
 }
 
 .content {
@@ -38,7 +24,7 @@ a {
 
 main {
     margin: 0 auto 90vh auto;
-    width: 70%;
+    /* width: 70%; */
 }
 
 header {
@@ -75,14 +61,15 @@ header nav a {
 }
 
 .category {
-    padding-top: 10vh;
+    /* padding-top: 10vh; */
     padding-bottom: 30vh;
 }
 
 .card {
     margin: 200px auto;
     position: sticky;
-    width: 50%;
+    /* width: 600px;
+    height: 400px; */
     top: 30vh;
 }
 
@@ -92,7 +79,7 @@ header nav a {
     left: 0;
     background-color: #5c5c6052;
     width: 100%;
-    height: 99%;
+    height: 100%;
 }
 
 .card h2 {
@@ -106,7 +93,54 @@ header nav a {
 
 img {
     width: 100%;
-    height: 400px;
+    height: 100%;
+}
+
+
+/* @media screen and (min-width: 300px) {
+    .card {
+        width: 150px;
+        height: 100px;
+    }
+} */
+
+@media screen and (min-width: 350px) {
+    body {
+        font-size: 14px;
+    }
+    main {
+        width: 90%;
+    }
+    .card {
+        width: 300px;
+        height: 200px;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    body {
+        font-size: 16px;
+    }
+    main {
+        width: 70%;
+    }
+    .card {
+        width: 450px;
+        height: 300px;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    body {
+        font-size: 18px;
+    }
+    main {
+        width: 70%;
+    }
+    .card {
+        width: 600px;
+        height: 400px;
+    }
 }
 
 
@@ -147,6 +181,7 @@ img {
     }
 }
 
+
 @media screen and (max-width: 500px) {
     body {
         font-size: 12px;
@@ -166,4 +201,4 @@ img {
     .card h2 {
         font-size: 12px;
     }
-} */
+}
